made changes in some dependencies, sentiment analyzer and and made test files